# playground

c_muni/hw03/: assignment.adoc  dataDef.h  memoryVM.c  memoryVM.h  memoryVMObject.c  memoryVMObject.h  playground.c
c_muni/hw04/: CMakeLists.txt  assignment.adoc  gethash.c  hash_helper.c  hash_helper.h
cpp_muni/bomberman_game/: Bomb.cpp  Bomb.h  Bomberman.cpp  Bomberman.h  Bonus.h  BonusItem.cpp  BonusItem.h  CMakeLists.txt  Config.cpp  Config.h  Dimensions.cpp  Dimensions.h  Flame.cpp  Flame.h  GameObjectBase.h  GameObjectFactory.cpp  GameObjectFactory.h  Geometry.cpp  Geometry.h  Geometry_fwd.h  Geometry_print.h  Grid.cpp  Grid.h  IGameObject.h  IObjectVisitor.h  MapParser.cpp  MapParser.h  ObjectVisitorSkeleton.h  Player.cpp  Player.h  PlayerControl.cpp  PlayerControl.h  Playground.cpp  Playground.h  Rgb.h  SDLWrapper.cpp  SDLWrapper.h  TextureRef.h  Textures.cpp  Textures.h  (+4 more)
cpp_muni/bomberman_game/maps/: classic.txt  default.txt  empty.txt
cpp_muni/bomberman_game/test/: student_tests.cpp  testhelper.h
cpp_muni/hw01/: CMakeLists.txt  course.h  handler.cpp  handler.h  main.cpp  reservation.h  room.h  rsystem.cpp  rsystem.h  test-student.cpp
cpp_muni/hw02/: CMakeLists.txt  defs.hpp  errors.cpp  errors.hpp  interface.cpp  interface.hpp  main.cpp  test-example.cpp  test-main.cpp  test-utils.hpp  testprogram.pr  testworld.wr
cpp_muni/trie/: CMakeLists.txt  alphabet.h  morse.cpp  trie.h
erlang/otp_play/: README.md  rebar.config
erlang/otp_play/src/: otp_cient.erl  otp_play.app.src  otp_play_app.erl  otp_play_sup.erl  otp_server.erl  otp_server_sup.erl  play.erl
erlang/skolenie/: LICENSE  README.md  rebar.config  test_file.csv
erlang/skolenie/src/: skolenie.app.src  skolenie_app.erl  skolenie_sup.erl  task1.erl  task2.erl  task2_private.erl  task2_server.erl  task2_types.hrl
erlang/skolenie/test/eunit/: task1_tests.erl  task2_tests.erl
java_pevs/du1/: example.csv  out.csv
java_pevs/du1/src/com/pevs/: Main.java  Record.java
java_pevs/du2/: cards.csv  transactions.csv
java_pevs/du2/src/com/pevs/: BlueCard.java  CreditCard.java  GoldCard.java  Main.java
java_pevs/du3/src/com/pevs/: Api.java  AppView.java  AppViewModel.java  JsonToHtmlDto.java  Main.java  ResultView.java  ViewCommon.java
pascal_yr2016/pong_game/: hra.lpi  hra.lpr  hra.lps
pascal_yr2016/pong_game/backup/: hra.lpr.bak  hra.lps.bak
pascal_yr2016/pong_game/lib/: drawenv.pas
pascal_yr2016/pong_game/lib/backup/: drawenv.pas.bak
pascal_yr2016/pong_game/lib/i386-win32/: drawenv.ppu  hra.compiled
pascal_yr2016/pong_game/lib/x86_64-linux/: drawenv.ppu  hra.compiled
perl/: MyClass.pm  MyModule.pm  MyModuleInherited.pm  dbi.pl  jsonexcept.pl  mymoduletest.pl  regex2.pl  sort.pl  sub.pl  test.pl  test.txt  test1.pl  thread.pl  url-file-storable.pl
perl/modelovanie1/: Queue.pm  simulation.pl  simulation2.pl  zadanie_perl.pl
perl/modelovanie1/2/: zadanie_c.c  zadanie_perl.pl
perl/nike_prep/: db_send_test.pl  my_daemon.pl  my_daemon.sh
perl/nike_prep/lib/: my_database.pm
perl/rabbit/: prometheus.pl  receive.pl  send.pl
perl/tests/lib/: MathLib.pm
perl/tests/t/: MathLibTest.t  TreeCmpTest.t
perl/www/: users.sql
perl/www/cgi-bin/: my_database.pm  register.pl  sql_play.pl
perl/www/html/: index.html
pevs_cpp/1_dictionary/: CMakeLists.txt  MyString.cpp  MyString.h  RecordsHolder.cpp  RecordsHolder.h  dictionary.cpp  dictionary.h
pevs_cpp/2_palindrom/: CMakeLists.txt  Logger.cpp  Logger.h  Stack.cpp  Stack.h  palindrome.cpp  palindrome.h
pevs_cpp/3_inventar/: CMakeLists.txt  InventoryHolder.cpp  InventoryHolder.h  Queue.h  inventory.cpp  inventory.h
pevs_cpp/4_btree/: BinTree.cpp  BinTree.h  CMakeLists.txt  game.cpp  game.h  make.sh  tree.db
pevs_cs/2/Quizz/: App.xaml  App.xaml.cs  EnumMatchToBooleanConverter.cs  MainWindow.xaml  MainWindow.xaml.cs  MainWindowViewModel.cs  Quizz.csproj  Quizz.sln  QuizzFactory.cs  RelayCommand.cs  packages.config
pevs_cs/2/Quizz/Properties/: AssemblyInfo.cs  Resources.Designer.cs
pevs_cs/forms/forms/: forms.sln
pevs_cs/forms/forms/forms/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  forms.csproj
pevs_cs/forms/forms/forms.Android/: MainActivity.cs  forms.Android.csproj
pevs_cs/forms/forms/forms.Android/Properties/: AndroidManifest.xml  AssemblyInfo.cs
pevs_cs/forms/forms/forms.Android/Resources/: Resource.designer.cs
pevs_cs/forms/forms/forms.iOS/: AppDelegate.cs  Info.plist  Main.cs  forms.iOS.csproj
pevs_cs/forms/forms/forms/Models/: User.cs
pevs_cs/pevs_cs_1/Dictionary/: Dictionary.csproj  Dictionary.sln  Program.cs  Record.cs
pevs_cs/pevs_cs_1/Dictionary/Properties/: AssemblyInfo.cs
pevs_web/2/: blog.html  common.js  contacts.html  galery.html  index.html  login.html  mock_db.dtd  mock_db.xml  registracia.html  style.css  subpage.html
py_muni/: du2_uhrecky.py  du3.py  du4.py  du5.py
py_yr2016/calc_py/: calc.py  calc.py~
scala-soap/globesy/: Dockerfile  build.sbt  curl-example.sh  globesy.postman_collection.json
scala/ocr_connect/: build.sbt
scala/test/: build.sbt
scala/test/.bsp/: sbt.json
typescript/: package-lock.json  package.json
typescript/src/: app.module.ts  common.ts  main.ts
typescript/src/auth/: ranks.decorator.ts  ranks.guard.ts
typescript/src/config/: typeorm.config.ts
typescript/src/courses/: course.entity.ts  course.repository.ts  courses.controller.ts  courses.module.ts  courses.service.ts
typescript/src/courses/dto/: create_course_dto.ts
typescript/src/lectures/: lecture.entity.ts  lecture.repository.ts  lectures.controller.ts  lectures.module.ts  lectures.service.ts
typescript/src/lectures/dto/: create_lecture_dto.ts
typescript/src/persons/: person-rank.enum.ts  person.entity.ts  person.repository.ts  persons.controller.ts  persons.module.ts  persons.service.ts
typescript/src/persons/dto/: create_person_dto.ts
typescript/src/profiles/: profile.entity.ts  profile.repository.ts  profiles.controller.ts  profiles.module.ts  profiles.service.ts
typescript/src/profiles/dto/: create_profile_dto.ts
web_yr2012/: index.html
web_yr2012/style/: style.css
(+37 files in other folders)
